[project]
name = "o3d-pye57"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Graham Knapp", email = "graham.knapp@acernis.fr" }
]
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "numpy<2.0",
    "open3d>=0.18.0",
    "pye57>=0.4.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/o3d_pye57"]
